prevent broken ui while loading..

--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,7 @@ h1 {
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: 95%;
-    justify-content: center;
+    justify-content: center;        
 }
 
 .flex-item-3 {
@@ -83,4 +83,8 @@ label {
     width: calc(100% - 130px) !important;
     float: left;
     margin-right: 8px;
+}
+
+.ng-cloak{
+    display: none !important;
 }
